# koreatech-assignment

./: README.md
AlgorithmNPractice/: PracticeAssignment01.ipynb  PracticeAssignment02.ipynb  PracticeAssignment03.ipynb  PracticeAssignment04.ipynb  PracticeAssignment05.ipynb  PracticeAssignment06.ipynb  PracticeAssignment07.ipynb  PracticeAssignment08.ipynb  PracticeAssignment09.ipynb  PracticeAssignment10.ipynb  PracticeAssignment11.ipynb  PracticeAssignment12.ipynb
CPrograming1/Assignment1/: README.md  main.c
CPrograming1/Assignment2/: README.md
CPrograming1/Assignment3/: README.md
CPrograming1/Assignment4/: README.md
CPrograming1/Assignment5/: README.md
CPrograming1/Assignment6/: README.md
CPrograming2/Assignment1/: README.md  README4Doxygen.md
CPrograming2/Assignment2/: README.md  README_FOR_DOXYGEN.md
CPrograming2/Assignment3/: CMakeLists.txt  Doxyfile  README.md  README_FOR_DOXYGEN.md
CPrograming2/Assignment3/doxygen/: _filter_function_8c.js  _filter_function_8h_source.html  _problem1_8c.html  _problem1_8c.js  _problem2_8c.js  _problem3_8c.html  _problem3_8c.js  _problem4_8c.html  _problem4_8c.js  _problem5_8c.html  dir_7508eee46c283650e757daabce573424.html  dir_7508eee46c283650e757daabce573424.js  globals.html  globals_defs.html  globals_func.html  index.html  navtreedata.js
CPrograming2/Assignment3/doxygen/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_9.js  all_b.js  all_d.js  all_e.js  defines_0.js  defines_1.html  enums_0.js  functions_0.js  functions_2.js  functions_3.js  functions_8.html  functions_8.js  functions_9.js  pages_0.html  variables_5.js
CPrograming2/Assignment3/src/: Problem1.c  Problem3.c  Problem4.c  Problem5.c
CPrograming2/Assignment3/src/Problem5/: FilterFunction.c
CPrograming2/Assignment4/: CMakeLists.txt  README.md  README_FOR_DOXYGEN.md
CPrograming2/Assignment5/: README.md  README_FOR_DOXYGEN.md
CPrograming2/Assignment6/: README.md  README_FOR_DOXYGEN.md
CPrograming2/MyProblem1/: README.md  problem.c  solve.c
CPrograming2/MyProblem2/: README.md  output.txt  solve.c
CPrograming2/MyProblem3/: README.md  solve.c
CPrograming2/MyProblem4/: APSimulator.c  APSimulator.h  CMakeLists.txt  README.md  main.c
CPrograming2/MyProblem5/: README.md  main.c  solve.c  tictactoe.c  tictactoe.h
CPrograming2/MyProblem6/: README.md  main.c  solve.c
CProgramming1/Assignment1/: README.md
CProgramming1/Assignment2/: README.md
CProgramming1/Assignment3/: README.md
CProgramming1/Assignment4/: README.md
CProgramming1/Assignment5/: README.md
CProgramming1/Assignment6/: README.md
CProgramming2/: README.md
CProgramming2/Assignment1/: CMakeLists.txt  README.md  README_FOR_DOXYGEN.md
CProgramming2/Assignment2/: CMakeLists.txt  README.md  README_FOR_DOXYGEN.md
CProgramming2/Assignment3/: README.md  README_FOR_DOXYGEN.md
CProgramming2/Assignment4/: README.md  README_FOR_DOXYGEN.md
CProgramming2/Assignment5/: CMakeLists.txt  README.md  README_FOR_DOXYGEN.md
CProgramming2/Assignment6/: CMakeLists.txt  README.md  README_FOR_DOXYGEN.md
CProgramming2/MyProblem1/: README.md
CProgramming2/MyProblem2/: solve.c
CProgramming2/MyProblem4/: APSimulator.c  README.md  solve.c
CProgramming2/MyProblem5/: README.md
CProgramming2/MyProblem6/: CMakeLists.txt  README.md  remscinterface.c  remscinterface.h
CompilerNPractice/Assignment5/: Makefile
ComputerGraphicsNPractice/Assignment1/: Table1.fbx  Table1.max  Table2.max  Table2.stl
ComputerGraphicsNPractice/Assignment10/: build.bat  main.cpp
ComputerGraphicsNPractice/Assignment4/: CMakeLists.txt  convert.ipynb  main.cpp  main.h  name.h  name.hpp  (+1 more)
ComputerGraphicsNPractice/Assignment7/: Animation.hpp  CMakeLists.txt  EmptyAnimation.hpp  FlyKickAnimation.hpp  MathUtils.h  Robot.hpp  RunAnimation.hpp  SplitView.hpp  glk.cpp  glk.h  glkWin.cpp  main.cpp
ComputerGraphicsNPractice/Assignment7/parts/: S_RightArm.ase
CppProgramming/Assignment04/: CMakeLists.txt
CppProgramming/Assignment04/inc/: colortextutils.h  consoleutils.h  environment.h  game.h  systemutils.h
CppProgramming/Assignment04/src/: bufferingmanager.cpp  colortextutils.cpp  memoryutils.cpp  puzzle.cpp  systemutils.cpp
DataStructureNPractice/Chap01-Triangle/: .cproject  .project  CMakeLists.txt
DataStructureNPractice/Chap01-Triangle/src/: Triangle.h
DataStructureNPractice/Chap09-AVL/: .cproject  .project  CMakeLists.txt
DataStructureNPractice/Chap09-AVL/contrib/includes/gtest/: gtest-printers.h
DataStructureNPractice/Chap09-AVL/src/: AVL.h  AVLTests.cpp
DigitalEngineeringNPractice/: README.md
MobileProgramming/: README.md
MulticoreProgramming/: README.md
MulticoreProgramming/Assignment2/Lab2-2/: CMakeLists.txt  main.cpp
MulticoreProgramming/Assignment3/Lab3/: CMakeLists.txt  DS_timer.cpp  main.cpp
MulticoreProgramming/Assignment4/Lab4-1/: CMakeLists.txt  main.cu  timer.h
MulticoreProgramming/Assignment5/Lab5-2/: CMakeLists.txt  main.cu
OperatingSystem/: README.md
RealTimeSystemNPractice/Assignment_Lab_Term_Project/: CMakeLists.txt  Makefile  mps.c  mps_cv.c
RealTimeSystemNPractice/Assignment_Lab_Term_Project/gantt-chart-generator/: index.html
RealTimeSystemNPractice/Assignment_Lab_Term_Project/results/: CV_N_4^A_M-RM^S_FCFS^I-example3.txt  CV_N_4^A_M-RM^S_RR-20^I-example3.txt  CV_N_4^A_M-RM^S_SJF^I-example3.txt  CV_N_4^A_M_LM^S_FCFS^I-example3.txt  CV_N_4^A_M_LM^S_RR-20^_I-example3.txt  CV_N_4^A_M_LM^S_SJF^I-example3.txt  CV_N_4^A_S^S_FCFS^I-example3.txt  CV_N_4^A_S^S_RR-20^I-example3.txt  CV_N_4^A_S^S_SJF^I-example3.txt  N_4^A_M-RM^S_FCFS^I-example3.txt  N_4^A_M-RM^S_RR-20^I-example3.txt  N_4^A_M-RM^S_SJF^I-example3.txt  N_4^A_M_LM^S_FCFS^I-example3.txt  N_4^A_M_LM^S_RR-20^_I-example3.txt  N_4^A_M_LM^S_SJF^I-example3.txt  N_4^A_S^S_FCFS^I-example3.txt  N_4^A_S^S_RR-20^I-example3.txt  N_4^A_S^S_SJF^I-example3.txt
RealTimeSystemNPractice/Assignment_Lab_Term_Project/scripts/: generate-csv.js  generate-time-csv.js  run.sh
RealTimeSystemNPractice/Assignment_Lab_Term_Project/tests/: example1.txt  example2.txt  example3.txt
WebProgramming/: README.md
(+1429 files in other folders)
