cmake_minimum_required(VERSION 3.9)
project(Lab4-1 LANGUAGES CXX CUDA)

set(ROOT_DIR ${PROJECT_SOURCE_DIR})

file(GLOB PROJECT_SRC ${ROOT_DIR}/*)
set(SOURCES ${PROJECT_SRC})
set(CMAKE_CUDA_STANDARD 20)
set(CMAKE_CXX_STANDARD 20)

find_package(CUDA)

add_executable(Lab4-1 ${SOURCES})
set_target_properties(Lab4-1 PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_property(TARGET Lab4-1 PROPERTY CUDA_ARCHITECTURES 86)

if(APPLE)
    set_property(TARGET Lab4-1 PROPERTY BUILD_RPATH ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
endif()